# projet_big_data_cytech_25

./: .gitignore  docker-compose.yml
docker/: airflow.Dockerfile
docs/: setup_env.md
ex01_data_retrieval/: build.sbt
ex01_data_retrieval/.bloop/: root-test.json  root.json
ex01_data_retrieval/project/.bloop/: ex01_data_retrieval-build.json
ex01_data_retrieval/scripts/: tempCodeRunnerFile.sh
ex01_data_retrieval/src/main/scala/fr/cytech/retrieval/: Main.scala
ex02_data_ingestion/: build.sbt
ex02_data_ingestion/.bloop/: ex02_data_ingestion-test.json  ex02_data_ingestion.json
ex02_data_ingestion/.bloop/ex02_data_ingestion/bloop-bsp-clients-classes/classes-Metals-ChOUtqsgSGyn2bBKdjWlog==/: log4j2.properties
ex02_data_ingestion/project/.bloop/: ex02_data_ingestion-build.json
ex02_data_ingestion/src/main/scala/fr/cytech/ingestion/: Main.scala
ex03_sql_table_creation/: creation.sql  insertion.sql  reset.sql  test_queries.sql
ex04_dashboard/: README.md  app.py  ex04_eda.ipynb  main.py  pyproject.toml  requirements.txt
ex05_ml_prediction_service/: main.py  pyproject.toml  requirements.txt
ex05_ml_prediction_service/models/: lgbm_total_amount.joblib
ex05_ml_prediction_service/src/: config.py  data_loader.py  feature_engineering.py  predict.py  train.py
ex05_ml_prediction_service/tests/: conftest.py  test_data_validation.py  test_features.py
ex06_airflow/: README.md
ex06_airflow/dags/: airflow_pipeline.py
scripts/: build_jars.sh
