[project]
name = "ex05-ml-prediction-service"
version = "0.1.0"
description = "ML prediction service for NYC Yellow Taxi total_amount"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    "boto3>=1.34",
    "joblib>=1.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "flake8>=7.0",
    "pyment>=0.3",
]
app = [
    "streamlit>=1.30",
]

[tool.flake8]
max-line-length = 99
exclude = [".venv", "__pycache__", "models"]
